# exspec

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  Cargo.toml  README.md  ROADMAP.md
.claude/hooks/: recommended.md
.claude/rules/: git-conventions.md  git-safety.md  security.md  state-ownership.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  extractor.rs  hints.rs  lib.rs  metrics.rs  observe.rs  observe_report.rs  output.rs  query_utils.rs  rules.rs
crates/core/tests/: t001_runtime_hint_red.rs
crates/lang-php/: Cargo.toml
crates/lang-php/queries/: assertion.scm  error_test.scm  extends_class.scm  import_contract.scm  import_mapping.scm  import_pbt.scm  mock_assignment.scm  mock_usage.scm  parameterized.scm  production_function.scm  test_function.scm  wait_and_see.scm
crates/lang-php/src/: lib.rs  observe.rs
crates/lang-php/tests/: php_observe_laravel_test.rs
crates/lang-python/: Cargo.toml
crates/lang-python/queries/: assertion.scm  error_test.scm  exported_symbol.scm  import_mapping.scm  production_function.scm  re_export.scm  wait_and_see.scm
crates/lang-python/src/: lib.rs  observe.rs
crates/lang-rust/: Cargo.toml
crates/lang-rust/queries/: assertion.scm  cfg_test.scm  error_test.scm  exported_symbol.scm  import_contract.scm  import_mapping.scm  import_pbt.scm  mock_assignment.scm  mock_usage.scm  parameterized.scm  production_function.scm  re_export.scm  test_function.scm  wait_and_see.scm
crates/lang-rust/src/: lib.rs  observe.rs
crates/lang-rust/tests/: rust_observe_clap_test.rs
crates/lang-typescript/: Cargo.toml
crates/lang-typescript/queries/: assertion.scm  error_test.scm  import_mapping.scm  wait_and_see.scm
crates/lang-typescript/src/: lib.rs  observe.rs
docs/: README.md  SPEC.md  STATUS.md  ci.md  configuration.md  dogfooding-results.md  known-constraints.md  languages.md  observe-boundaries.md  observe-eval-results.md  observe-ground-truth-php-laravel.md  observe-ground-truth-python-httpx.md  observe-ground-truth-rust-clap.md  observe-ground-truth-rust-tower.md  observe-ground-truth.md  severity-review.md
docs/cycles/: 20260306_0000_project-setup.md  20260306_0700_phase3-cleanup.md  20260307_0037_phase5a-rust-support.md  20260307_0947_issue14-capture-name-tests.md  20260307_1400_t104-t105-hardcoded-relational.md  20260308_1200_t001-fp-fix.md  20260308_2100_t001-fp-p0.md  20260308_2300_t001-fp-chai-property.md  20260309_1350_ts-expect-modifier-chains.md  20260309_1600_ts-expect-assertions.md  20260309_2000_chai-vocab-expansion.md  20260309_2010_expect-soft-chains.md  20260310_1400_ignore-config-plumbing.md  20260310_1739_pytest-fixture-filter.md  20260311_1048_php-facade-should-receive.md  20260311_1126_pytest-fail-oracle.md  20260311_1200_min-severity-filter.md  20260311_1300_python_assert_broadening.md  20260312_1030_t110_skip_only_detection.md  20260312_1147_t001_return_chai_property.md  20260312_1520_nested_test_function_fp.md  20260313_1541_warn_info_fp_fixes.md  20260313_1737_t001_runtime_hint.md  20260315_1555_import_tracing_layer2.md  20260315_1700_namespace_type_import.md  20260317_1057_observe-extractor-trait.md  20260317_1530_python_observe.md  20260317_1646_rust_observe.md  20260317_1707_php_observe.md  20260317_1800_python_absolute_import_fix.md  20260317_2349_php-external-namespace-filter-fix.md  20260318_0022_rust-observe-crate-name-import.md  20260318_0100_rust-observe-pub-mod-wildcard.md  20260318_1130_rust-observe-file-exports-any-symbol.md  20260318_1340_rust-observe-workspace-aggregation.md  20260318_2300_ts-observe-precision-redogfood-b4-fix.md  20260318_2351_python-observe-dogfooding.md  20260319_0028_python-observe-l1-fixes.md  20260319_0100_python-observe-test-hardening.md  20260323_2007_python-observe-submodule-direct-import.md  (+17 more)
docs/plans/: phase-8b-observe-poc.md
scripts/: generate_python_gt.py  test_generate_python_gt.py
tests/fixtures/config/: inf_ratio.toml  min_severity.toml  nan_ratio.toml  neg_inf_ratio.toml  severity_override.toml  valid.toml
tests/fixtures/php/: multiple_tests.php  suppressed.php  t001_expect_exception.php  t001_expect_exception_message.php  t001_pass_attribute.php  t001_pass_camelcase.php  t001_pass_docblock.php  t001_pass_facade_assert.php  t001_pass_fqcn_attribute.php  t001_pass_named_class_assert.php  t001_pass_pest.php  t001_pass_pest_arrow.php  t001_pass_pest_arrow_chained.php  t001_violation.php  t001_violation_non_this_expects.php  t001_violation_pest.php  t001_violation_phpunit_mock.php  t002_pass.php  t002_violation.php  t003_pass.php  t003_violation.php  t004_pass.php  t004_pass_pest.php  t004_violation.php  t005_pass.php  t005_violation.php  t006_pass.php  t006_violation.php  t008_pass.php  t008_violation.php  t102_dataprovider.php  t106_pass_no_duplicates.php  t106_violation.php  t107_pass_with_messages.php  t107_violation.php  t108_pass_no_sleep.php  t108_violation_sleep.php  t109_pass.php  t109_violation.php  t110_violation.php
tests/fixtures/python/: nested_test_function.py  t001_pytest_fail.py  t001_pytest_raises.py  t001_pytest_raises_with_match.py  t001_pytest_warns.py  t001_pytest_warns_with_match.py  t003_pass.py  t102_cls_excluded.py  t102_pass.py  t102_self_excluded.py  t102_violation.py  t103_pass_assertRaises.py  t103_pass_assertRaisesRegex.py  t103_pass_assertWarns.py  t103_pass_assertWarnsRegex.py  t103_pass_pytest_raises.py  t103_violation.py  t106_pass_no_duplicates.py  t106_pass_trivial_literals.py  t106_violation.py  t107_pass_single_assert.py  t107_pass_with_messages.py  t107_violation.py  t108_pass_no_sleep.py  t108_violation_sleep.py  t109_pass.py  t109_violation.py  t110_violation.py  test_class_decorated.py  test_class_false_positive.py  test_fixture_false_positive.py
tests/fixtures/rust/: suppressed.rs  t001_pass.rs  t001_should_panic.rs  t001_should_panic_before_test.rs  t001_should_panic_in_mod.rs  t001_violation.rs  t002_pass.rs  t002_violation.rs  t003_pass.rs  t003_violation.rs  t004_pass.rs  t004_violation.rs  t005_pass.rs  t005_violation.rs  (+10 more)
(+54 files in other folders)
