[workspace]
members = [
    "crates/core",
    "crates/lang-python",
    "crates/lang-typescript",
    "crates/lang-php",
    "crates/lang-rust",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.5.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/morodomi/exspec"
authors = ["morodomi"]

[workspace.dependencies]
exspec-core = { path = "crates/core", version = "0.5.0" }
exspec-lang-python = { path = "crates/lang-python", version = "0.5.0" }
exspec-lang-typescript = { path = "crates/lang-typescript", version = "0.5.0" }
exspec-lang-php = { path = "crates/lang-php", version = "0.5.0" }
exspec-lang-rust = { path = "crates/lang-rust", version = "0.5.0" }
