[package]
name = "exspec-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "exspec"
path = "src/main.rs"

[dependencies]
exspec-core = { path = "../core" }
exspec-lang-python = { path = "../lang-python" }
exspec-lang-typescript = { path = "../lang-typescript" }
exspec-lang-php = { path = "../lang-php" }
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
toml = "0.8"

[dev-dependencies]
serde_json = "1"
