[package]
name = "exspec-cli"
version = "0.1.1"
edition = "2021"
description = "Static analyzer for test design quality -- verifies tests function as executable specifications"
license = "MIT"
repository = "https://github.com/morodomi/exspec"
authors = ["morodomi"]
keywords = ["testing", "static-analysis", "test-quality", "tdd", "tree-sitter"]
categories = ["development-tools::testing", "command-line-utilities"]

[[bin]]
name = "exspec"
path = "src/main.rs"

[dependencies]
exspec-core = { path = "../core" }
exspec-lang-python = { path = "../lang-python" }
exspec-lang-typescript = { path = "../lang-typescript" }
exspec-lang-php = { path = "../lang-php" }
exspec-lang-rust = { path = "../lang-rust" }
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
toml = "0.8"

[dev-dependencies]
serde_json = "1"
