[package]
name = "exspec"
version.workspace = true
edition.workspace = true
description = "Static analyzer for test design quality -- verifies tests function as executable specifications"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["testing", "static-analysis", "test-quality", "tdd", "tree-sitter"]
categories = ["development-tools::testing", "command-line-utilities"]

[[bin]]
name = "exspec"
path = "src/main.rs"

[dependencies]
exspec-core.workspace = true
exspec-lang-python.workspace = true
exspec-lang-typescript.workspace = true
exspec-lang-php.workspace = true
exspec-lang-rust.workspace = true
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
regex = "1"
toml = "0.8"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
