[package]
name = "exspec-core"
version = "0.1.1"
edition = "2021"
description = "Core analysis engine for exspec"
license = "MIT"
repository = "https://github.com/morodomi/exspec"
authors = ["morodomi"]
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-sarif = { version = "0.8", features = ["opt-builder"] }
toml = "0.8"
tree-sitter = "0.24"
streaming-iterator = "0.1"

[dev-dependencies]
tree-sitter-python = "0.23"
