[package]
name = "exspec-lang-php"
version = "0.1.1"
edition = "2021"
description = "PHP language support for exspec"
license = "MIT"
repository = "https://github.com/morodomi/exspec"
authors = ["morodomi"]
publish = false

[dependencies]
exspec-core = { path = "../core" }
tree-sitter = "0.24"
tree-sitter-php = "0.23"
streaming-iterator = "0.1"
