[package]
name = "exspec-lang-php"
version.workspace = true
edition.workspace = true
description = "PHP language support for exspec"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
exspec-core.workspace = true
tree-sitter = "0.24"
tree-sitter-php = "0.23"
streaming-iterator = "0.1"

[dev-dependencies]
tempfile = "3"
