[package]
name = "exspec-lang-python"
version.workspace = true
edition.workspace = true
description = "Python language support for exspec"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
exspec-core.workspace = true
tree-sitter = "0.24"
tree-sitter-python = "0.23"
streaming-iterator = "0.1"

[dev-dependencies]
tempfile = "3"
