[package]
name = "exspec-lang-rust"
version.workspace = true
edition.workspace = true
description = "Rust language support for exspec"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
exspec-core.workspace = true
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
streaming-iterator = "0.1"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
