[package]
name = "exspec-lang-typescript"
version = "0.1.1"
edition = "2021"
description = "TypeScript language support for exspec"
license = "MIT"
repository = "https://github.com/morodomi/exspec"
authors = ["morodomi"]
publish = false

[dependencies]
exspec-core = { path = "../core" }
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
streaming-iterator = "0.1"
